--- a/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
+++ b/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
@@ -12,14 +12,14 @@
    "metadata": {},
    "source": [
     "<!--Crea una celda de tipo markdown de segundo nivel que se llame funciones y librerías-->\n",
-    "-- Haz doble click!!!"
+    "Haz doble click aquí para ver las instrucciones!!!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--<!--Crea una celda de tipo markdown con comentarios sobre este ejercicio-->Haz doble click!!!"
+    "<!--Crea una celda de tipo markdown con comentarios sobre este ejercicio-->Haz doble click aquí para ver las instrucciones"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "<!--Crea una celda de tipo markdown añadiendo descripción de las librerías-->\n",
-    "-- Haz doble click!!!"
+    "Haz doble click aquí para ver las instrucciones"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!--Crea una celda de tipo markdown añadiendo una descripción de las funciones--> --Haz doble click!!!"
+    "<!--Crea una celda de tipo markdown añadiendo una descripción de las funciones-->Haz doble click aquí para ver las instrucciones"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "metadata": {},
    "source": [
     "<!-- Crea una celda de tipo markdown de segundo nivel que se llame: \"Abrimos nuestro fichero de texto\"-->\n",
-    "--Haz doble click!!!"
+    "Haz doble click aquí para ver las instrucciones"
    ]
   },
   {
