--- a/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
+++ b/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
@@ -342,7 +342,7 @@
     "        print(\"La mediana es: \" + str(resultado))\n",
     "    else:\n",
     "        resultado = statistics.mean(lista_numeros)\n",
-    "        print(\"La mediana es: \" + str(resultado))\n",
+    "        print(\"La media es: \" + str(resultado))\n",
     "else:\n",
     "    print(\"Nuestra lista de númeroes esta vacia\")    "
    ]
