--- a/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
+++ b/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
@@ -66,12 +66,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Crea una función en esta celda que realice el calculo de la ecuación que aparece abajo"
+    "A continuación crea una función realice el cálculo de la ecuación que aparece abajo:"
    ]
   },
   {
@@ -103,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Añade aqui la nueva función"
+    "#Añade aqui la nueva función que realiza el cálculo de la ecuación"
    ]
   },
   {
