--- a/Bloque 2/Examen Final/Plantillas/Ejercicio_1.ipynb
+++ b/Bloque 2/Examen Final/Plantillas/Ejercicio_1.ipynb
@@ -19,7 +19,7 @@
     "* Rellena los datos nulos de la columna \"currency\" subtituyendolos por la frase \"Sin datos\"\n",
     "\n",
     "(Consejo: **revisa la documentación de las funciones necesarias** para realizar las operaciones correctas)\n",
-    "Por último guarda el archivo con el nombre \"properties_final.csv\" y ejecuta el código par obtener la respuesta"
+    "Por último guarda el archivo con el nombre \"properties-rent_final.csv\" y ejecuta el código par obtener la respuesta"
    ]
   },
   {
