--- a/Bloque 3/Sesion 1/Homeworks/Homework_2.ipynb
+++ b/Bloque 3/Sesion 1/Homeworks/Homework_2.ipynb
@@ -4,20 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 1"
+    "# Homework 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para realizar este ejercicio es necesario usar la plantilla \"Homework 1\". Carga el archivo \"stock.csv\" y aplicale una función que realice la siguiente acción sobre la columna \"low\":\n",
+    "Para realizar este ejercicio es necesario usar la plantilla \"Homework 2\". Carga el archivo \"sun_spots.txt\" y realiza las siguientes acciones:\n",
     "\n",
-    "* Sí el valor de \"low\" es menor que 100 multiplicalo por la raiz cuadrada de 2\n",
-    "* Sí el valor de \"low\" esta entre 100 y 500 (ambos incluidos) multiplicalo por la raiz cuadrada de 3\n",
-    "* Si el valor de \"low\" es mayor que 500 cámbialo por el valor 0\n",
+    "* Pasa la columna \"Date\" a tipo de dato fecha\n",
+    "* Crea una nueva columna que se llame \"Month\" que contenga el mes de cada registro en tipo de dato \"entero\"\n",
     "\n",
-    "Por último guarda el DataFrame resultante con el nombre  \"stock_final.csv\" y lanza el código de comprobación. Copia el resultado como respuesta."
+    "Por último guarda el DataFrame resultante con el nombre  \"sun_spots_final.csv\" y lanza el código de comprobación. Copia el resultado como respuesta."
    ]
   },
   {
@@ -25,24 +24,6 @@
    "metadata": {},
    "source": [
     "## 1 Instala las librerías "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install openpyxl"
    ]
   },
   {
@@ -68,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     " hasher = hashlib.md5()\n",
     "\n",
-    "with open('stock_final.csv', 'rb') as afile:\n",
+    "with open('sun_spots_final.csv', 'rb') as afile:\n",
     "\n",
     "    buf = afile.read()\n",
     "\n",
@@ -91,6 +72,13 @@
     "\n",
     "print(\"Pegar este resultado en el cuadrado de la respuesta: \" + hasher.hexdigest())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
