--- a/Bloque 3/Sesion 1/Ejemplos/Ejemplo_1.ipynb
+++ b/Bloque 3/Sesion 1/Ejemplos/Ejemplo_1.ipynb
@@ -23,11 +23,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /srv/conda/envs/notebook/lib/python3.7/site-packages (1.0.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (1.18.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-1.0.1-cp37-cp37m-manylinux1_x86_64.whl (10.1 MB)\n",
+      "\u001b[K     |████████████████████████████████| 10.1 MB 3.4 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting numpy>=1.13.3\n",
+      "  Downloading numpy-1.18.1-cp37-cp37m-manylinux1_x86_64.whl (20.1 MB)\n",
+      "\u001b[K     |████████████████████████████████| 20.1 MB 184 kB/s  eta 0:00:01     |███████████████████▋            | 12.3 MB 41.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.6.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
+      "Collecting pytz>=2017.2\n",
+      "  Downloading pytz-2019.3-py2.py3-none-any.whl (509 kB)\n",
+      "\u001b[K     |████████████████████████████████| 509 kB 34.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
+      "Installing collected packages: numpy, pytz, pandas\n",
+      "Successfully installed numpy-1.18.1 pandas-1.0.1 pytz-2019.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +87,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2019_nCoV_data.csv         'Ejemplo_3 (2).ipynb'   stocks.csv\r\n",
-      " Ejemplo_1_graficado.ipynb   el_tiempo_USA.txt\r\n",
-      " Ejemplo_1.ipynb             Fecha.xlsx\r\n"
+      "/home/jovyan/Bloque 3/Sesion 1\n"
      ]
     }
    ],
    "source": [
-    "ls"
+    "cd .."
    ]
   },
   {
@@ -95,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock = pd.read_csv(\"stocks.csv\")"
+    "stock = pd.read_csv(\"DataSet/stocks.csv\")"
    ]
   },
   {
@@ -430,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +566,7 @@
        "7   NTES   325.00   333.78  319.00   333.56   1356386  Normal"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +716,7 @@
        "7   NTES   325.00   333.78  319.00   333.56   1356386  Normal"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +866,7 @@
        "7   NTES   325.00   333.78   35   333.56   1356386  Normal"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,6 +874,13 @@
    "source": [
     "stock"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
