--- a/Bloque 3/Sesion 2/Ejemplos/Ejemplo 2.ipynb
+++ b/Bloque 3/Sesion 2/Ejemplos/Ejemplo 2.ipynb
@@ -18,19 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandas\n",
-      "  Downloading pandas-1.0.1-cp37-cp37m-manylinux1_x86_64.whl (10.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 10.1 MB 2.8 MB/s eta 0:00:01    |██▉                             | 901 kB 2.8 MB/s eta 0:00:04\n",
-      "\u001b[?25hCollecting pytz>=2017.2\n",
-      "  Downloading pytz-2019.3-py2.py3-none-any.whl (509 kB)\n",
-      "\u001b[K     |████████████████████████████████| 509 kB 63.3 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.6.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
-      "Collecting numpy>=1.13.3\n",
-      "  Downloading numpy-1.18.1-cp37-cp37m-manylinux1_x86_64.whl (20.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 20.1 MB 32.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
-      "Installing collected packages: pytz, numpy, pandas\n",
-      "Successfully installed numpy-1.18.1 pandas-1.0.1 pytz-2019.3\n",
+      "Requirement already satisfied: pandas in /srv/conda/envs/notebook/lib/python3.7/site-packages (1.0.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (1.18.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +50,7 @@
       "Requirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas->pandasql) (1.14.0)\n",
       "Building wheels for collected packages: pandasql\n",
       "  Building wheel for pandasql (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pandasql: filename=pandasql-0.7.3-py3-none-any.whl size=26817 sha256=1c9f853688c4d78a6ab6ffaea236e7b35f099f1882a3a290300d1fcd4d5c88e3\n",
+      "\u001b[?25h  Created wheel for pandasql: filename=pandasql-0.7.3-py3-none-any.whl size=26817 sha256=4b3d7610df949271c7226fb5d3d89e8ca1b3ce05c229d9f86684f25f4f3671a3\n",
       "  Stored in directory: /home/jovyan/.cache/pip/wheels/5c/4b/ec/41f4e116c8053c3654e2c2a47c62b4fca34cc67ef7b55deb7f\n",
       "Successfully built pandasql\n",
       "Installing collected packages: pandasql\n",
@@ -73,8 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,7 +76,7 @@
      "text": [
       "Collecting xlrd\n",
       "  Downloading xlrd-1.2.0-py2.py3-none-any.whl (103 kB)\n",
-      "\u001b[K     |████████████████████████████████| 103 kB 3.4 MB/s eta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 103 kB 3.6 MB/s eta 0:00:01\n",
       "\u001b[?25hInstalling collected packages: xlrd\n",
       "Successfully installed xlrd-1.2.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -94,29 +88,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Customer Churn Model.txt'  \u001b[0m\u001b[01;34m'Sesion 1'\u001b[0m/   Untitled.ipynb\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
+    "## Importamos módulos"
    ]
   },
   {
@@ -125,12 +100,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = pd.read_csv(\"Customer Churn Model.txt\")"
+    "import pandas as pd\n",
+    "import pandasql as ps"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/Bloque 3/Sesion 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Traramiento datos de clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer = pd.read_csv(\"DataSet/Customer Churn Model.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +344,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,16 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandasql as ps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "[3333 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,8 +706,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -967,7 +969,7 @@
        "[7 rows x 21 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,35 +979,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " athlete_score.csv     'Customer Churn Model.txt'   Untitled.ipynb\r\n",
-      " atletas_country.xlsx  \u001b[0m\u001b[01;34m'Sesion 1'\u001b[0m/\r\n"
-     ]
-    }
-   ],
    "source": [
-    "ls"
+    "## Tratamiento datos de atletas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_df = pd.read_csv(\"athlete_score.csv\")"
+    "score_df = pd.read_csv(\"DataSet/athlete_score.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1069,7 @@
        "4           4        Sun Yang  0.024936"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,16 +1080,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_df = pd.read_excel(\"atletas_country.xlsx\")"
+    "country_df = pd.read_excel(\"DataSet/atletas_country.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1156,7 @@
        "4    Missy Franklin  United States"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1331,7 @@
        "[2300 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
