--- a/Bloque 3/Sesion 3/Homeworks/Homework_2.ipynb
+++ b/Bloque 3/Sesion 3/Homeworks/Homework_2.ipynb
@@ -11,12 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para realizar este ejercicio es necesario usar la plantilla \"Homework 2\". Realiza las siguientes tareas:\n",
+    "Para realizar este ejercicio usa la plantilla Homework 2. Conectate a la API de superhéroes (\"https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/all.json\"). Extrae la información del \"nombre\" y las \"powerstats\" de los 5 primeros (tal como aparecen) superheroes y llevalos a un DataFrame. \n",
     "\n",
-    "- Conectate a la BBDD del archivo \"chinook.db\"\n",
-    "- Realiza una consulta en la BBDD, que muestre la siguiente información de las 10 primeras facturas, ordenadas por \"InvoceId\" en este orden:  \"InvoceId\", \"InvoceDate\", \"FirstName\" y \"LastName\" \n",
+    "Debe quedar las siguientes columnas (los nombres tienen que ser exactamente estos):\n",
     "\n",
-    "Por último guarda el DataFrame resultante con el nombre  \"homework_2_final.csv\" y lanza el código de comprobación. Copia el resultado como respuesta."
+    "- name (object)\n",
+    "- intelligence (int64)\n",
+    "- strength (int64)\n",
+    "- speed (int64)\n",
+    "- gender (object)\n",
+    "\n",
+    "Por último guarda el resultado en el siguiente CSV (\"super_stats.csv\") y ejecuta el código de comprobación. Por último pega el resultado en la celda de respuesta."
    ]
   },
   {
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     " hasher = hashlib.md5()\n",
     "\n",
-    "with open('homework_2_final.csv', 'rb') as afile:\n",
+    "with open('super_stats.csv', 'rb') as afile:\n",
     "\n",
     "    buf = afile.read()\n",
     "\n",
