--- a/Bloque 3/Sesion 3/Ejemplos/Ejemplo 2.ipynb
+++ b/Bloque 3/Sesion 3/Ejemplos/Ejemplo 2.ipynb
@@ -11,13 +11,13 @@
      "text": [
       "Collecting pandas\n",
       "  Downloading pandas-1.0.1-cp37-cp37m-manylinux1_x86_64.whl (10.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 10.1 MB 2.8 MB/s eta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 10.1 MB 3.4 MB/s eta 0:00:01\n",
       "\u001b[?25hCollecting numpy>=1.13.3\n",
       "  Downloading numpy-1.18.1-cp37-cp37m-manylinux1_x86_64.whl (20.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 20.1 MB 38.9 MB/s eta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 20.1 MB 57.2 MB/s eta 0:00:01\n",
       "\u001b[?25hCollecting pytz>=2017.2\n",
       "  Downloading pytz-2019.3-py2.py3-none-any.whl (509 kB)\n",
-      "\u001b[K     |████████████████████████████████| 509 kB 34.5 MB/s eta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 509 kB 60.0 MB/s eta 0:00:01\n",
       "\u001b[?25hRequirement already satisfied: python-dateutil>=2.6.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
       "Requirement already satisfied: six>=1.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
       "Installing collected packages: numpy, pytz, pandas\n",
@@ -42,10 +42,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: requests in /srv/conda/envs/notebook/lib/python3.7/site-packages (2.22.0)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from requests) (2.8)\n",
       "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from requests) (1.25.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from requests) (2019.11.28)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /srv/conda/envs/notebook/lib/python3.7/site-packages (from requests) (2.8)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -18413,7 +18413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18422,7 +18422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18431,7 +18431,7 @@
        "{'message': 'failure', 'reason': 'Latitude must be specified'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18442,19 +18442,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    \"lat\": 40.71,\n",
-    "    \"lon\": -74\n",
+    "    \"lat\": 57.44,\n",
+    "    \"lon\": 61.23\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18471,7 +18471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -18479,18 +18479,18 @@
       "text/plain": [
        "{'message': 'success',\n",
        " 'request': {'altitude': 100,\n",
-       "  'datetime': 1583752474,\n",
-       "  'latitude': 40.71,\n",
-       "  'longitude': -74.0,\n",
+       "  'datetime': 1583834983,\n",
+       "  'latitude': 57.44,\n",
+       "  'longitude': 61.23,\n",
        "  'passes': 5},\n",
-       " 'response': [{'duration': 589, 'risetime': 1583755675},\n",
-       "  {'duration': 590, 'risetime': 1583810057},\n",
-       "  {'duration': 647, 'risetime': 1583815822},\n",
-       "  {'duration': 581, 'risetime': 1583821699},\n",
-       "  {'duration': 569, 'risetime': 1583827576}]}"
+       " 'response': [{'duration': 434, 'risetime': 1583866142},\n",
+       "  {'duration': 593, 'risetime': 1583871809},\n",
+       "  {'duration': 627, 'risetime': 1583877563},\n",
+       "  {'duration': 610, 'risetime': 1583883346},\n",
+       "  {'duration': 503, 'risetime': 1583889155}]}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18529,30 +18529,6 @@
    "outputs": [],
    "source": [
     "data = response.json()['request']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'altitude': 100,\n",
-       " 'datetime': 1582879789,\n",
-       " 'latitude': 40.71,\n",
-       " 'longitude': -74.0,\n",
-       " 'passes': 5}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
    ]
   },
   {
@@ -18656,7 +18632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -18680,48 +18656,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>message</th>\n",
-       "      <th>response</th>\n",
-       "      <th>request.altitude</th>\n",
-       "      <th>request.datetime</th>\n",
-       "      <th>request.latitude</th>\n",
-       "      <th>request.longitude</th>\n",
-       "      <th>request.passes</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>risetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>success</td>\n",
-       "      <td>[{'duration': 589, 'risetime': 1583755675}, {'...</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1583752474</td>\n",
-       "      <td>40.71</td>\n",
-       "      <td>-74.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>434</td>\n",
+       "      <td>1583866142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>593</td>\n",
+       "      <td>1583871809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>627</td>\n",
+       "      <td>1583877563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>610</td>\n",
+       "      <td>1583883346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>503</td>\n",
+       "      <td>1583889155</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   message                                           response  \\\n",
-       "0  success  [{'duration': 589, 'risetime': 1583755675}, {'...   \n",
-       "\n",
-       "   request.altitude  request.datetime  request.latitude  request.longitude  \\\n",
-       "0               100        1583752474             40.71              -74.0   \n",
-       "\n",
-       "   request.passes  \n",
-       "0               5  "
+       "   duration    risetime\n",
+       "0       434  1583866142\n",
+       "1       593  1583871809\n",
+       "2       627  1583877563\n",
+       "3       610  1583883346\n",
+       "4       503  1583889155"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.json_normalize(response.json())"
+    "pd.json_normalize(response.json(), 'response')"
    ]
   },
   {
