--- a/Bloque 3/Examen/Ejercicios/Ejercicio_2.ipynb
+++ b/Bloque 3/Examen/Ejercicios/Ejercicio_2.ipynb
@@ -68,7 +68,7 @@
    "source": [
     " hasher = hashlib.md5()\n",
     "\n",
-    "with open('sea_ice.csv', 'rb') as afile:\n",
+    "with open('analisis_hielo.csv', 'rb') as afile:\n",
     "\n",
     "    buf = afile.read()\n",
     "\n",
